Fixed some typos and format code

--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,14 @@ gradle-app.setting
 !gradle-wrapper.jar
 
 **/target
+**/test-output
 *.project
 *.classpath
 *.settings
 *bin
 *debug.log
 *.idea
+test-output/
 
 ### Gradle ###
 .gradle
